# witness-angel-mobile

./: LICENSE  MakeFile.py  Makefile  README.rst  buildozer.spec  pyproject.toml  requirements.txt  setup.cfg  setup.py
build_tools/: MyBootBroadcastReceiver.java  buildozer_hook.py
data/locales/de/LC_MESSAGES/: witness-angel-client.mo
data/locales/en/LC_MESSAGES/: witness-angel-client.mo
data/locales/fr/LC_MESSAGES/: witness-angel-client.mo
docs/source/: conf.py  index.rst  witness-angel-client.rst
po/: de.po  en.po  es.po  fr.po
pocs/pictures/: buildozer.spec  customservice.py  main.py  pictures.kv
pocs/pictures/service/: main.py
pocs/takepicture/: buildozer.spec  main.py
src/: main.py  service.py
src/data/locales/de/LC_MESSAGES/: witness-angel-client.mo
src/data/locales/es/LC_MESSAGES/: witness-angel-client.mo
src/waclient/: __init__.py  __main__.py  android_utils.py  app.py  background_service.py  cli.py  common_config.py  console.py  default_config_template.ini  recording_toolchain.py  user_settings_schema.json  usersettings.json  waclient_app.py  witnessangelclient.ini  witnessangelclient.kv
src/waclient/sensors/: gps.py  gyroscope.py  microphone.py
src/waclient/service_controller/: __init__.py  android_service_controller.py  base.py  subprocess_service_controller.py
src/waclient/utilities/: __init__.py  crashdumps.py  i18n.py  logging.py  misc.py  osc.py  widgets.py
tests/: _waclient_test_utilities.py  conftest.py  test_cli.py  test_i18n.py  test_recording_toolchain.py  test_sensors.py  test_service_controller.py  test_waclient_cli.py  test_waclient_crashdumps.py  test_waclient_recording_toolchain.py  test_waclient_sensors.py  test_waclient_service_controller.py  test_witness-angel-client.py
