[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"


[tool.poetry]
name = "waclient"
description = "Witness Angel Client App"
version = "0.1"
license = "MIT"
readme = "README.rst"
authors = ["Pascal Chambon"]
homepage = "https://github.com/WitnessAngel/witness-angel-client"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Operating System :: MacOS :: MacOS X",
]
#include = ["CHANGELOG", "tox.ini", "docs/*", "docs/api/*", "tests/*.py"]
exclude = ["_build"]

[tool.poetry.dependencies]
python = ">=3.6"

# Main utilities
kivy = "=1.11.1"
decorator = "^4.4"
wacryptolib = "^0.3.0"
docutils = "^0.15.2"
pygments = "^2.4"
pypiwin32 = "^223.0"
"kivy_deps.sdl2" = "=0.1.22"
"kivy_deps.glew" = "=0.1.12"
"kivy_deps.gstreamer" = "=0.1.17"
kivy_examples = "=1.11.1"
oscpy = "^0.5.0"
plyer = "^1.4"

[tool.poetry.dev-dependencies]

# Test runners and plugins
pytest = "^4.5"
pytest-cov = "^2.7"
pytest-randomly = "^3.0"
pytest-deadfixtures = "^2.1"
pytest-testmon = "^0.9"
pytest-timeout = "^1.3"
pytest-mock = "^1.11"
freezegun = "^0.3.12"
gevent = "^1.4"

# Linters and formatters
black = {version = "^18.3-alpha.0",allows-prereleases = true}
pylint = "^2.3"
safety = "^1.8"
yamllint = "^1.15"
xenon = "^0.5"
mypy = "^0.701"
doc8 = "^0.8"

# Documentation
sphinx = "^2.0"
sphinx-autodoc-typehints = "^1.6"
#TODO switch to that?  sphinx_rtd_theme = "^0.4.3"
sphinxcontrib-napoleon = "^0.7.0"
toml = "^0.10.0"


